fixed header area spacing

--- a/bonuses/superhero_database/superhero-database.css
+++ b/bonuses/superhero_database/superhero-database.css
@@ -1,11 +1,6 @@
-body *{
-    /*background-image: url("coffee-Background.jpg");*/
-    margin: 0;
-}
-
 div.header h1, h2, h4{
     color: black;
-    margin: .7em;
+    margin: .5em;
 }
 
 p{
@@ -28,15 +23,6 @@ span{
     font-size: 30px;
 }
 
-/*.footer{*/
-/*    margin: 0;*/
-/*    text-align: center;*/
-/*    background-image: url(".jpg");*/
-/*    background-size: cover;*/
-/*    color: black;*/
-/*    font-size: 30px;*/
-/*}*/
-
 /* Search bar*/
 
 #search{
@@ -55,32 +41,25 @@ span{
 }
 
 .search:hover, .search:focus{
-    border: 2px solid black;
+    /*border: 2px solid black;*/
     background-color: lightgoldenrodyellow;
-}
-
-/* OR Spacing */
-
-.or-spacing{
-    margin: 0 2em 0 2em;
-    color: black;
 }
 
 /* Dropdown menu */
 
 .affiliation-dropdown{
-    font-size: 18px;
+    font-size: 14px;
     border-radius: 5px;
     height: 50px;
     width: auto;
-    padding: 2px 23px 2px 30px;
+    padding: 2px 2px 2px 30px;
     outline: 0;
     background-color: lightgoldenrodyellow;
 }
 
 .button{
-    background-color: black;
-    border: 2px solid black;
+    background-color: darkred;
+    border: 2px solid darkred;
     color: white;
     padding: 12px 20px;
     text-align: center;
@@ -140,8 +119,8 @@ span{
 }
 
 .card-picture{
-    width:350px;
-    height:200px;
+    width:90%;
+    height:90%;
     object-fit: cover;
     overflow: hidden;
 }
